--- a/.env.example
+++ b/.env.example
@@ -1,38 +1,42 @@
-# TECHGURU ElevateCRM Environment Variables
+# Backend Configuration
+DB_USER=postgres
+DB_PASSWORD=postgres123
+DB_NAME=elevatecrm
+DB_HOST=db
+DB_PORT=5432
+DATABASE_URL=postgresql+psycopg2://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+ASYNC_DATABASE_URL=postgresql+asyncpg://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
-# Database Configuration
-DATABASE_URL=postgresql://elevatecrm_user:secure_password_here@localhost:5432/elevatecrm_db
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_URL=redis://${REDIS_HOST}:${REDIS_PORT}/0
 
-# Application Settings
-APP_NAME=TECHGURU ElevateCRM
-APP_VERSION=1.0.0
-DEBUG=true
-SECRET_KEY=your-secret-key-here-change-in-production
+CELERY_BROKER_URL=redis://${REDIS_HOST}:${REDIS_PORT}/1
+CELERY_RESULT_BACKEND=redis://${REDIS_HOST}:${REDIS_PORT}/2
 
-# JWT Configuration  
-JWT_SECRET_KEY=your-jwt-secret-key-here-change-in-production
-JWT_ALGORITHM=HS256
+SECRET_KEY=your-super-secret-key
+ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Keycloak Configuration (Optional - for production auth)
-KEYCLOAK_SERVER_URL=http://localhost:8080
-KEYCLOAK_REALM=elevatecrm
-KEYCLOAK_CLIENT_ID=elevatecrm-backend
-KEYCLOAK_CLIENT_SECRET=your-keycloak-client-secret
+# Frontend Configuration
+NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXT_PUBLIC_WS_URL=ws://localhost:8000
+NEXT_PUBLIC_USE_DEMO=false
+VAPID_PUBLIC_KEY=your-vapid-public-key
 
-# Redis Configuration
-REDIS_URL=redis://localhost:6379/0
+# Demo Mode
+USE_DEMO=false
 
-# Email Configuration (Optional)
-SMTP_HOST=localhost
-SMTP_PORT=1025
-SMTP_USERNAME=
-SMTP_PASSWORD=
-SMTP_USE_TLS=false
+# E-commerce Integrations
+SHOPIFY_API_KEY=
+SHOPIFY_API_SECRET=
+SHOPIFY_API_VERSION=2023-04
+SHOPIFY_WEBHOOK_SECRET=
 
-# File Storage
-UPLOAD_DIR=uploads/
-MAX_FILE_SIZE=10485760
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
 
-# Environment
-ENVIRONMENT=development
+# OAuth Callbacks
+GOOGLE_OAUTH_CALLBACK_URL=http://localhost:3000/api/auth/callback/google
+MICROSOFT_OAUTH_CALLBACK_URL=http://localhost:3000/api/auth/callback/microsoft
