--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -34,11 +34,11 @@
     }
   },
   "include": [
+    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "next-env.d.ts",
-    "dist/types/**/*.ts"
+    "tests"
   ],
   "exclude": [
     "node_modules"
